syntax = "proto2";
option optimize_for = SPEED;

// Information about a single showtime
message ShowtimeProto {
  // Time formatted for locale
  required string Time = 1;

  // Link to show with time (e.g. for movie ticket vendors)
  optional string Url = 2;

  // Dubbed and subtitled info
  // These are google language codes, such as "en", "fr", ...
  repeated string Dubbed = 3;
  repeated string Subtitled = 4;
};

// Used to store the showtimes for a movie and theater combination.
message AllShowtimesProto {
  repeated ShowtimeProto Showtimes = 1;

  // What ticket vendor owns this showtimes list --
  // currently either MovieTickets ("mt") or Fandango ("f")
  optional string Vendor = 2;

  // Caption info, such as (CC), (RWC), etc.
  optional string Captioning = 3;
};

// Used to store the information for a given movie
message MovieProto {
  optional string Identifier = 1;

  optional string Title = 2;

  // length in minutes
  optional int32  Length = 3;
  optional string Language = 4;
  optional string Genre = 5;
  optional string Description = 6;
  optional string RawRating = 8;

  // movie score (0-100 scale)
  optional int32 Score = 9;

  optional string IMDbUrl = 10;
  //optional string PosterUrl = 11;
  //optional string OfficialSiteUrl = 12;
  //repeated string TrailerUrls = 13;

  // Directors and Actors.
  repeated string Director = 11;
  repeated string Cast = 12;

  // Dubbed and subtitled information for display at movie level.
  repeated string Dubbed = 13;
  repeated string Subtitled = 14;

  // Release date in ISO8601 format
  optional string ReleaseDate = 15;
};

// Used to store the information for a given theater
message TheaterProto {
  optional string Identifier = 1;

  optional string Name = 2;
  optional string StreetAddress = 3;
  optional string City = 4;
  optional string State = 5;
  optional string PostalCode = 6;
  optional string Country = 7;
  //optional string MapUrl = 8;
  //optional string Url = 9;
  optional string Phone = 8;

  // Theater address in standard format
  optional double Latitude = 9;
  optional double Longitude = 10;
};

message TheaterListingsProto {
  message TheaterAndMovieShowtimesProto {
    message MovieAndShowtimesProto {
      required string MovieIdentifier = 1;
      required AllShowtimesProto Showtimes = 2;
    }

    required TheaterProto Theater = 3;
    repeated MovieAndShowtimesProto MovieAndShowtimes = 4;
  }

  repeated MovieProto Movies = 5;
  repeated TheaterAndMovieShowtimesProto TheaterAndMovieShowtimes = 6;
};

message ReviewProto {
  optional string Title = 1;
  optional string Url = 2;
  optional float Rating = 3;
  optional string Snippet = 4;
  optional string Content = 5;
  optional string Publisher = 6;
  optional string Author = 7;
  optional string Date = 8;
};

message ReviewsListProto {
  repeated ReviewProto reviews = 1;
};
